--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h1>Trabajos</h1>
         <div class="project-grid">
             <a href="https://sebaselchadmomos.github.io/YessEnergias/" target="_blank" class="project">
-                <img src="image.png" alt="Proyecto 1">
+                <img src="yessEnergias.png" alt="Proyecto 1">
                 <h2>Yess Energías</h2>
                 <ul class="technologies">
                     <li>HTML</li>
@@ -114,6 +114,23 @@
         </div>
     </div>
 </section>
+
+<section id="linea">
+</section>
+
+
+
+<section id="certificados">
+    <h1>Certificados</h1>
+    <div class="certificates">
+        <a href="https://www.freecodecamp.org/certification/SebasDev777/responsive-web-design" target="_blank" class="certificate">
+            <img src="freeCodeCampCertificate.png" alt="Certificado de freeCodeCamp">
+            <h2>freeCodeCamp</h2>
+            <p>Responsive Web Design</p>
+        </a>
+    </div>
+</section>
+
 
 <section id="linea">
 </section>
