--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <span>WhatsApp</span>
         </a>
         
-        <a href="https://instagram.com/sebas_locura_extrema" target="_blank" class="contact-link instagram">
+        <a href="https://instagram.com/seb.css_/" target="_blank" class="contact-link instagram">
             <i class="fab fa-instagram"></i>
             <span>Instagram</span>
         </a>
